--- a/public/list1/HomePage.html
+++ b/public/list1/HomePage.html
@@ -101,5 +101,40 @@
         </section>
         
     </article>
+
+    <article class = 'container menuEat'>
+        <section class = 'menuFlex'>
+            <a href="#">Bar Menu</a>
+            <a href="#">Food Menu</a>
+            <a href="#">Desserts Menu</a>
+        </section>
+    </article>
+
+
+    <article class = 'container menuBar'>
+        <section class = 'BarFlex'>
+            <div class = 'card1'>Menu that fits you palatte</div>
+            <div class = 'card2'>
+                <img src="../img/Правая ложка.svg" alt="">
+            </div>
+            <div class = 'card3'>Today’s Special</div>
+
+            <div class = 'BarMenuFlex'>
+                <div class = 'Wine'>
+                    Wine & Beer
+                </div>
+                <div>
+                    <img src="../img/Бар.png" alt="">
+                </div>
+                <div class = 'Cocktails'>
+                    Cocktails
+                </div>
+            </div>
+
+            <button>
+                View More
+            </button>
+        </section>
+   </article>
 </body>
 </html>
