--- a/public/list1/HomePage.html
+++ b/public/list1/HomePage.html
@@ -31,6 +31,7 @@
         <section class="HeroFlex">
             <div class="card1">
                 <div class = 'flacour'>Chase the new Flavour</div>
+                <div><img src="../img/Правая ложка.svg" alt=""></div>
                 <div class = 'keyFine'>The key to Fine dining</div>
                 <p>Sit tellus lobortis sed senectus vivamus molestie. Condimentum volutpat morbi facilisis quam scelerisque sapien. Et, penatibus aliquam amet tellus </p>
                 <button>Explore Menu</button>
@@ -136,5 +137,82 @@
             </button>
         </section>
    </article>
+
+   <article class = 'shef container'>
+        <section class = 'shefFlex'>
+            <div class="imgShef">
+                <img src="../img/Мужик.jpg" alt="photo">
+            </div>
+            <div class="promoShefFlex">
+                <div class = 'card1'>Chef’s Word</div>
+                <div class = 'card2'>
+                    <img src="../img/Правая ложка.svg" alt="photo">
+                </div>
+                <div class = 'card3'>What we believe in</div>
+                <div class = 'card4'>
+                    <img src="../img/Запятые.svg" alt="">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit auctor sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue ac consequat, aliquam molestie lectus eu. Congue iaculis integer curabitur semper sit nunc.
+                </div>
+                <div class = 'card5'>Kevin Luo</div>
+                <div class = 'card6'>Chef & Founder</div>
+                <div class = 'card7'><img src="../img/Роспись.svg" alt=""></div>
+            </div>
+        </section>
+   </article>
+
+   <article class = 'clients container'>
+        <section class = 'clientsGrid'>
+            <section class = 'clientsFlex'>
+                <div class="text1">Testimony</div>
+                <div class="text2"><img src="../img/Правая ложка.svg" alt="photo"></div>
+                <div class="text3">Happy customers</div>
+            </section>   
+            <div class="photo">
+                <div>
+                    <img src="../img/Мужик1.png" alt="">
+                </div>
+                <div class = 'cardsFlex'>
+                    <div class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue.</div>
+                    <div class="text2">Wade Warren</div>
+                    <div class="text3">Sommelier</div>
+                </div>
+            </div>
+            <div class="photo">
+                <div>
+                    <img src="../img/Баба1.png" alt="">
+                </div>
+                <div class="cardsFlex">
+                    <div class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue.</div>
+                    <div class="text2">Jane Cooper</div>
+                    <div class="text3">Chef</div>
+                </div>
+            </div>
+            <div class="photo">
+                <div>
+                    <img src="../img/Мужик2.png" alt="">
+                </div>
+                <div class="cardsFlex">
+                    <div class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue.</div>
+                    <div class="text2">Robert Fox</div>
+                    <div class="text3">Chef</div>
+                </div>
+            </div>
+            <div class="photo">
+                <div>
+                    <img src="../img/Баба2.png" alt="">
+                </div>
+                <div class="cardsFlex">
+                    <div class="text1">Lorem ipsum dolor sit amet, consectetur adipiscing sit. auctor sit iaculis in arcu. Vulputate nulla lobortis mauris eget sit. Nulla scelerisque scelerisque congue.</div>
+                    <div class="text2">Brooklyn Simmons</div>
+                    <div class="text3">Caterer</div>
+                </div>
+            </div>
+        </section>
+   </article>
+
+   <article class = 'video container'>
+        <img src="../img/Video.png" alt="">
+   </article>
+
 </body>
 </html>
