--- a/public/list1/HomePage.html
+++ b/public/list1/HomePage.html
@@ -121,14 +121,74 @@
             <div class = 'card3'>Today’s Special</div>
 
             <div class = 'BarMenuFlex'>
-                <div class = 'Wine'>
-                    Wine & Beer
+                <div class = 'WineFlex'>
+                    <div class = 'Wine'> Wine & Beer</div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Chapel Hill Shiraz</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$56</div>
+                        <div class = 'text4'>AU | Bottle</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Catena Malbec</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$59</div>
+                        <div class = 'text4'>AR | Bottle</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>La Vieille Rosé</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$44</div>
+                        <div class = 'text4'>FR | 750 ml</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Rhino Pale Ale</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$31</div>
+                        <div class = 'text4'>IE | 750 ml</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Irish Guinness</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$26</div>
+                        <div class = 'text4'>IE | 750 ml</div>
+                    </div>
                 </div>
                 <div>
-                    <img src="../img/Бар.png" alt="">
+                    <img class ='barImg' src="../img/Бар.png" alt="">
                 </div>
-                <div class = 'Cocktails'>
-                    Cocktails
+                <div class = 'WineFlex'>
+                    <div class = 'Wine'> Cocktails</div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Chapel Hill Shiraz</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$56</div>
+                        <div class = 'text4'>AU | Bottle</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Catena Malbec</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$59</div>
+                        <div class = 'text4'>AR | Bottle</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>La Vieille Rosé</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$44</div>
+                        <div class = 'text4'>FR | 750 ml</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Rhino Pale Ale</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$31</div>
+                        <div class = 'text4'>IE | 750 ml</div>
+                    </div>
+                    <div class = 'WineGrid'>
+                        <div class = 'text1'>Irish Guinness</div>
+                        <div class = 'text2'>-------</div>
+                        <div class = 'text3'>$26</div>
+                        <div class = 'text4'>IE | 750 ml</div>
+                    </div>
                 </div>
             </div>
 
@@ -213,6 +273,83 @@
    <article class = 'video container'>
         <img src="../img/Video.png" alt="">
    </article>
+
+   <article class = 'laurels container'>
+        <section class = 'laurelsFlex'>
+            <div class = 'laurelsGrid'>
+                <section class = 'textFlex'>
+                    <div class="text1">Awards & recognition</div>
+                    <div class="text2"><img src="../img/Правая ложка.svg" alt=""></div>
+                    <div class="text3">Our Laurels</div>
+                </section>
+                <div class="cardGrid">
+                    <div class="text1"><img src="../img/2.png" alt=""></div>
+                    <div class="text2">Bib Gourmond</div>
+                    <div class="text3">Lorem ipsum dolor sit amet, consectetur.</div>
+                </div>
+                <div class="cardGrid">
+                    <div class="text1"><img src="../img/1.png" alt=""></div>
+                    <div class="text2">Rising Star</div>
+                    <div class="text3">Lorem ipsum dolor sit amet, consectetur.</div>
+                </div>
+                <div class="cardGrid">
+                    <div class="text1"><img src="../img/5.png" alt=""></div>
+                    <div class="text2">AA Hospitality </div>
+                    <div class="text3">Lorem ipsum dolor sit amet, consectetur.</div>
+                </div>
+                <div class="cardGrid">
+                    <div class="text1"><img src="../img/3.png" alt=""></div>
+                    <div class="text2">Outstanding Chef</div>
+                    <div class="text3">Lorem ipsum dolor sit amet, consectetur. </div>
+                </div>
+            </div>
+            <div class = 'laurelsImg'>
+                <img class ='G2' src="../img/G2.png" alt="">
+                <img src="../img/Хавка.png" alt="">
+            </div>
+        </section>
+   </article>
+
+   <article class = 'blogs container'>
+        <section class = 'blogsGrid'>
+            <section class = 'texts'>
+                <div class = 'text1'>Blogs</div>
+                <div class = 'text2'><img src="../img/Правая ложка.svg" alt=""></div>
+                <div class = 'text3'>Gerícht updates</div>
+            </section>
+            <div class = 'card'>
+                <div class = 'cardImg'><img src="../img/Мясо.png" alt=""></div>
+                <div class = 'cardData'>16 Apr 2021</div>
+                <div class = 'cardDescription'>tips for prepping and caring for your grill</div>
+                <div class = 'cardTextDescr'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus in.</div>
+                <div class = 'readmore'>Read More</div>
+            </div>
+            <div class = 'card'>
+                <div class = 'cardImg'><img src="../img/Пить.png" alt=""></div>
+                <div class = 'cardData'>23 May 2021</div>
+                <div class = 'cardDescription'>summer cocktails and mocktails</div>
+                <div class = 'cardTextDescr'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus in.</div>
+                <div class = 'readmore'>Read More</div>
+                </div>
+            <div class = 'card'>
+                <div class = 'cardImg'><img src="../img/Лаврушка.png" alt=""></div>
+                <div class = 'cardData'>06 Aug 2021</div>
+                <div class = 'cardDescription'>easy cooking for college students</div>
+                <div class = 'cardTextDescr'>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Volutpat mattis ipsum turpis elit elit scelerisque egestas mus in.</div>
+                <div class = 'readmore'>Read More</div>
+            </div>
+                
+            <section class = 'butt'>
+                <button>
+                    View More
+                </button>
+            </section>
+        </section>
+   </article>
+
+   <footer class = 'container'>
+
+   </footer>
 
 </body>
 </html>
